--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ localStorage.json
 
 logs.log
 
-plugins/
-
 themes/un/
+
+themes/base/friend.css
+
+themes/base/gorawgit.css
+
+themes/FriendGrid.theme.css
